--- a/cobranca/src/main/resources/templates/PesquisaTitulos.html
+++ b/cobranca/src/main/resources/templates/PesquisaTitulos.html
@@ -9,15 +9,30 @@
 </head>
 
     <section layout:fragment="conteudo">
+    <div  layout:include="MensagemGeral"></div>
     <div class="panel panel-default">
     		<div class="panel-heading">
     			<div class="clearfix">    				
     				<h1 class="panel-title aw-titulo-panel">Pesquisa de Títulos</h1>
     				<a  class="btn btn-link aw-link-panel" href="/titulos/novo">Novo Título</a>
     			</div>
-    		</div>    		
+    		</div>    	
     		<div class="panel-body">
-	    		<table class="table table-bordered table-striped">
+			<form class="form-horizontal" method="GET" action="/titulos" th:object="${filtro}">		
+				<div class="form-group">
+					<div class="col-sm-4">
+						<div class="input-group">
+							<input class="form-control" placeholder="Qual título você está procurando?" autofocus="autofocus" th:field="*{descricao}"></input>
+							<span class="input-group-btn">
+								<button type="submit" class="btn btn-default">
+							 		<i class="glyphicon glyphicon-search"></i>
+							 	</button>
+							</span>
+						</div>
+					</div>
+				</div>
+			</form>    		
+    			<table class="table table-bordered table-striped">
 		    		<thead>
 					    <tr>
 					      <th class="text-center col-md-1">#</th>
@@ -34,11 +49,25 @@
 					      <td th:text="${titulo.descricao}"></td>
 					      <td class="text-center" th:text="${{titulo.dataVencimento}}"></td>
 					      <td class="text-right" th:text="| R$ ${{titulo.valor}}|"></td>
-					      <td class="text-center">
+					      <td class="text-center" th:attr="data-role=${titulo.codigo}">
 					      		<span class="label" th:text="${titulo.status.descricao}"
 					      		       th:classappend="${titulo.pendente ? 'label-danger' : 'label-success'}"></span>
 					      </td>
-					      <td class="text-center"></td>
+					      <td class="text-center">
+					      	<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}" title="Editar" rel="tooltip" data-placement="top">
+					      		<span class="glyphicon glyphicon-pencil"></span>					      
+					      	</a>
+					        <a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal" th:attr="data-codigo=${titulo.codigo}, data-descricao=${titulo.descricao}" title="Excluir" rel="tooltip" data-placement="top">
+						       <span class="glyphicon glyphicon-remove" ></span>
+					        </a>
+					        
+					         <a class="btn btn-link btn-xs js-atualizar-status" th:if="${titulo.pendente}" title="Receber" rel="tooltip" data-placement="top" 
+					                 th:attr="data-codigo=${titulo.codigo}"
+					                 th:href="@{/titulos/{codigo}/receber(codigo=${titulo.codigo})}">
+						       <span class="glyphicon glyphicon-check" ></span>
+					        </a>
+					      
+					      </td>
 					    </tr>  
 					    <tr>  
 					      <td colspan="6" th:if="${#lists.isEmpty(titulos)}">Nenhum título foi encontrado! </td>
@@ -46,6 +75,9 @@
         			</tbody>
 	    		</table>
 			</div>
+			
+			<div layout:include="DialogoConfirmacaoExclusao"></div>
+			
     </div>
     </section>
 
